[package]
name = "yams-core"
version = "0.1.0"
authors = ["Justin Huang <justin.y.huang@live.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
clap = "3.0.0-beta.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0.48"

[dev-dependencies]
float-cmp = "0.9.0"
